circles visible dates fixed

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -163,6 +163,7 @@ circle
 }
 
 .conclusion 
+    padding 0 2em
     margin 5rem auto 0 auto
     max-width 60rem
     color #FFF
@@ -170,20 +171,20 @@ circle
         color #FFF
         border-bottom: 1px solid #FFF        
 
-.method
+.method    
     margin 0 auto
     max-width 50rem
     color #FFF
-    padding 2em 0em
     font-family $sans
     text-decoration-color #FFF
+    padding 2rem 
     a
         color #FFF
         border-bottom: 1px solid #FFF        
         
     p
         font-size 14px
-
+        
     .method-title
         font-weight 800
         
